# helence-orcamento

./: .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml
backend/app/: config.py  main.py
backend/app/admin/: router.py
backend/app/api/v1/: router.py
backend/app/auth/: dependencies.py  repository.py  router.py  schemas.py  security.py  service.py
backend/app/catalog/: repository.py  router.py  schemas.py  service.py
backend/app/db/: backup.py  connection.py  migrate.py  seed.py
backend/app/db/migrations/: 0001_initial.sql  0002_quote_item_discounts.sql  0003_imported_files_status.sql  0004_import_processing.sql  0005_compatibility_rules.sql  0006_family_component_requirements.sql  0007_quote_duplication.sql  0008_auth.sql  0009_preco_por_item.sql  0010_product_kit_items.sql  0011_product_compositions.sql
backend/app/files/: storage.py
backend/app/imports/: extraction.py  json_ingest.py  repository.py  router.py  schemas.py  service.py
backend/app/quotes/: export.py  pricing.py  repository.py  router.py  schemas.py  service.py
backend/app/shared/: errors.py  logging.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth.py  test_catalog_components.py  test_catalog_reference_crud.py  test_extraction_gabarito.py  test_health.py  test_imports.py  test_imports_json.py  test_migrations.py  test_publish.py  test_quotes.py  test_review.py  test_seed.py
backend/tests/unit/: test_backup.py  test_error_handlers.py  test_extraction.py  test_quotes_pricing.py
docs/: 01-auditoria-pdf-dominio.md  (+12 more)
(+59 files in other folders)
